[metadata]
name = shop-db2
author = Jan-Frederik Schmidt
author_email = janfschmidt@mailbox.org
description = The simple way to manage purchases and user interactions in a small community.
long_description = file:README.rst
long_description_content_type = text/x-rst
license = MIT
url = https://github.com/g3n35i5/shop-db2


[options]
python_requires = >=3.8,<3.10
packages = find:
package_dir =
    =src
install_requires =
    importlib-metadata
    bcrypt==3.1.7
    Flask==1.1.1
    Flask-Bcrypt==1.0.1
    Flask-Cors==3.0.8
    Flask-Migrate==2.5.2
    Flask-Script==2.0.6
    Flask-SQLAlchemy==2.4.0
    gunicorn==19.9.0
    itsdangerous==1.1.0
    Jinja2==2.10.1
    Mako==1.1.0
    MarkupSafe==1.1.1
    nose==1.3.7
    pdfkit==0.6.1
    Pillow==10.3.0
    pycparser==2.19
    PyJWT==1.7.1
    python-dateutil==2.8.0
    python-editor==1.0.4
    six==1.12.0
    SQLAlchemy==1.3.8
    Werkzeug==0.15.6
    dateutils==0.6.12



[options.packages.find]
where = src

[options.package_data]
* = py.typed

shop_db2 =
    uploads/**
    templates/**

[options.extras_require]
dev =
    %(tox)s
    %(lint)s
    %(test)s
    %(build)s

lint =
    %(lint-template)s
    # Add your linting dependencies below this line
    types-python-dateutil==2.9.0.20240316
    types-jwt==0.1.3
    types-Flask==1.1.1

test =
    %(test-template)s
    # Add your testing dependencies below this line.
    # Dependencies that are imported in one of your files
    # must also be added to the linting dependencies.
    pyfakefs==3.6
    Flask-Testing==0.7.1

build =
    %(build-template)s
    # Add your build dependencies below this line


##########################################
# DO NOT CHANGE ANYTHING BELOW THIS LINE #
##########################################

tox =
    tox==4.14.2

lint-template =
    isort==5.13.2
    black==24.3.0
    mypy==1.9.0
    pylint==3.1.0
    pytest==8.1.1
    types-docutils
    types-setuptools
    jinja2==2.10.1
    ruff==0.3.5

test-template =
    pytest==8.1.1
    pytest-randomly==3.15.0
    pytest-cov==5.0.0
    coverage[toml]==7.4.4

build-template =
    build[virtualenv]==1.2.1
